# edgeVault

./: .gitignore  CMakeLists.txt  partitions.csv  sdkconfig.defaults
components/common/include/: ev_queue.hpp  ev_ring_buffer.hpp  ev_types.hpp
components/connectivity/: CMakeLists.txt
components/connectivity/include/: network_manager.hpp  wifi_manager.hpp
components/connectivity/src/: network_manager.cpp  wifi_manager.cpp
components/data_pipeline/: CMakeLists.txt
components/data_pipeline/include/: data_pipeline.hpp
components/data_pipeline/src/: data_pipeline.cpp
components/modbus_master/: CMakeLists.txt
components/modbus_master/include/: modbus_frame.hpp  modbus_master.hpp  modbus_register_map.hpp
components/modbus_master/src/: modbus_circuit_breaker.cpp  modbus_frame.cpp  modbus_master.cpp  modbus_register_map.cpp  modbus_transport.cpp
components/sensor_hub/: CMakeLists.txt
components/sensor_hub/include/: adc_battery.hpp  ds3231.hpp  lm75a.hpp  sensor_hub.hpp
components/sensor_hub/src/: adc_battery.cpp  ds3231.cpp  lm75a.cpp  sensor_hub.cpp
components/storage/: CMakeLists.txt
components/storage/include/: config_manager.hpp  sd_logger.hpp
components/storage/src/: config_manager.cpp  sd_logger.cpp
docs/adr/: 001-sensor-data-queue-topology.md  ADR_template.md
docs/adrs/: 001-sensor-data-queue-topology.md  002-modbus-register-map.md
main/: CMakeLists.txt  Kconfig.projbuild  main.cpp
test/host/modbus_frame/: CMakeLists.txt  test_modbus_frame.cpp
